# PyTorchDedispersion

./: .dockerignore  .gitignore  .readthedocs.yaml  Dockerfile  LICENSE  Makefile  README.md  codecov.yml  mkdocs.yml  pyproject.toml  setup.py
.github/workflows/: ci.yml
docs/: config.md  index.md  install.md  testing.md  usage.md
docs/reference/: boxcar_filter.md  candidate_finder.md  data_processor.md  dedisperse_candidates.md  dedisperse_candidates_large_hdf.md  dedisperse_candidates_large_hdf_two_threads.md  dedispersion.md  index.md
pytorch_dedispersion/: boxcar_filter.py  candidate_finder.py  config.json  config.py  data_processor.py  dedisperse_candidates.py  dedisperse_candidates_large_hdf.py  dedisperse_candidates_large_hdf_two_threads.py  dedispersion.py  file_handler.py  main.py
tests/: README.md  conftest.py  dedispersion_test.py  integration_test.py  test_boxcar_candidate.py  test_cli_helpers.py  test_config.json  test_data_processor_hdf5.py
