[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "PyTorchDedispersion"
version = "0.1.0"
description = "GPU-accelerated dedispersion, boxcar filtering, and FRB candidate finding in PyTorch."
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [{ name = "Nikita Kosogorov+" , email = "nakosogorov@gmail.com" }]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering :: Astronomy"
]


dependencies = [
  "numpy",
  "tqdm",
  "h5py"
]

[project.optional-dependencies]
fil = ["your"]          # needed for reading .fil files
dev = [
  "pytest",
  "pytest-cov",
  "black",
  "ruff",
  "build",
  "twine",
  "pre-commit"
]
docs = [
  "mkdocs>=1.6",
  "mkdocs-material>=9.5",
  "mkdocstrings[python]>=0.25",
  "pymdown-extensions>=10.8",
  "ruff>=0.1"
]


[project.scripts]
pydedisp = "pytorch_dedispersion.dedisperse_candidates:main"
pydedisp-large = "pytorch_dedispersion.dedisperse_candidates_large_hdf:main"
pydedisp-large2 = "pytorch_dedispersion.dedisperse_candidates_large_hdf_two_threads:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["pytorch_dedispersion*"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
select = ["E","F","I","UP"]


[tool.coverage.run]
source = ["pytorch_dedispersion"]

[tool.coverage.report]
omit = [
  "pytorch_dedispersion/dedisperse_candidates_large_hdf*.py",
]
skip_covered = true
show_missing = true
fail_under = 70

